🎐 Fixed the linux/MacOS version. Deleted the .bat file (useless).